Future Build 210
Application Changes:
- Added a new improvement type that can disable a skill group selected by the user. To be used by RunnerHub customdata ruleset. 
- Added a new improvement type that governs whether a character can become a cyberzombie. Customdata has been provided to apply this to the Flashback System from Chrome Flesh.
- Power Foci and Spellcasting Foci now only provide the highest of their dicepool to a given spell's dicepool per SR5 318. Implemented by https://github.com/MemeticContagion

Data Changes:
- Fixed issues with the Dodge, Bonus Street Cred and Street Cred Multiplier custom improvements. 

New Strings:
- String_DisableSkillGroupPrompt
- Message_CyberzombieRequirementsImprovement

Build 209

Application Changes:
- Metagenic quality balances are now shown in the Karma summary tab while in create mode. This allows for more easily seeing how many qualities you need to take to even up, and properly accounts for the karma lost to balance up positive and negative metagenic qualities.
- Internally changed all 'Metagenetic' references (except for the improvement type) to 'Metagenic'. 
- Skills can now benefit from Conditional improvements that are not applied to the base pool of a skill. 
- Added a 'GetAvailableAmmo' int to the Print method for weapons, exposed as 'availableammo'. This provides a count of the total amount of ammunition that can fit into the current weapon.It does NOT filter by types of ammunition, just the total available amount. 
- Weapons can now use a 'useskillspec' node to force the specialisation they use in place of their name. Mostly intended to be used for Exotic Melee/Ranged weapons.
- All equipment items that specify a Rating (Cyberware, Gear, Vehicle Mods, Weapon Accessories) can now specify a RatingLabel that is applied in place of the standard Rating. For example, Fiberoptic Hair can specify that the Rating is ten-centimetre increments of length. 